# Video-Editing-and-AI-tools

./: adobe.py  main.py  readme.md
core/: ai_engine.py  audio_engine.py  plugin_loader.py  project.py  render_engine.py
gui_app/: main.py
plugins/: example_plugin.py
rust_engine/: Cargo.toml  pyproject.toml
rust_engine/src/: audio.rs  clip.rs  effects.rs  export.rs  internal.rs  lib.rs  video.rs
subtitle_engine/: Cargo.toml
subtitle_engine/src/: lib.rs
tools/: create_effect.py
ui/: main_window.py  styles.py  timeline.py
ui/widgets/: effects_panel.py  program_monitor.py  project_bin.py  properties_panel.py  timeline.py  tools.py
utils/: asset_loader.py  icons.py  time_utils.py
