[package]
name = "kanha_core"
version = "0..0"
edition = "2021"

# This makes it a Python Plugin (.pyd / .so)
[lib]
name = "kanha_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
symphonia = { version = "0.5", features = ["all", "opt-simd"] }
ffmpeg-next = "7.0"
thiserror = "1.0"