[package]
name = "kanha_core"
version = "0.5.0"
edition = "2021"

[lib]
name = "kanha_core"
crate-type = ["cdylib"]

[dependencies]
# Python interaction
pyo3 = { version = "0.22", features = ["extension-module"] }

# Audio Engine
symphonia = { version = "0.5", features = ["all", "opt-simd"] }
hound = "3.5"  # Wav export support

# Video Engine with "Deep Embed" flags
# "static": Bakes the code into your .pyd (Standalone)
# "build":  Downloads and builds FFmpeg if missing
ffmpeg-next = { version = "7.0", features = ["static", "build"] }